[package]
name = "telegram-login"
version = "0.2.2"
authors = ["Julian Fell <julesfell@gmail.com>"]
description = "A rust implementation of the verification of Telegram Login requests"
license = "MIT"
repository = "https://github.com/jtfell/telegram-login-rs"

[dependencies]
ring = "0"
hex = "0"
chrono = "0"
serde = "1"
serde_derive = "1"
